--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Some Stuff</p>
+    <ol>
+        <li>hey man</li>
+    </ol>
 </body>
 </html>
