--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Slot Machine</h1>
+    <h1>Slot Machine Sim</h1>
     <h2 id="slotValueOne"></h2>
 </body>
 <script src="index.js"></script>
