--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Slot Machine Sim</h1>
     <h2 id="slotValueOne">0</h2>
-    <button id="slotButton" onclick="spin">CLICK TO SPIN</button>
+    <button id="slotButton" onclick="spin()">CLICK TO SPIN</button>
     <script src="index.js"></script>
 </body>
 </html>
