--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Slot Machine Sim</h1>
     <h2 id="slotValueOne">0</h2>
+    <h2 id="slotValueTwo">0</h2>
+    <h2 id="slotValueThree">0</h2>
     <button id="slotButton" onclick="spin()">CLICK TO SPIN</button>
     <script src="index.js"></script>
 </body>
