--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2 id="slotValueThree">0</h2>
     <button id="slotButton" onclick="spin()">CLICK TO SPIN</button>
     <script src="index.js"></script>
+    <p class="disclaimer">*DISCLAIMER* THIS IS NOT AN ACTUAL SLOT MACHINE. NO REAL CURRENCY CAN BE LOST OR GAINED. PLEASE PLAY RESPONSIBLY. IF YOU OR SOMEONE YOU KNOW IS IN A MAJOR GAMBLING ADDICTION, CALL 1-800-GAMBLER</p>
 </body>
 </html>
